I made some changes

--- a/generator/templates/generator/about.html
+++ b/generator/templates/generator/about.html
@@ -4,6 +4,6 @@
 
     <h1>This page is created by <h2>Ariyo Taghizadeh</h2></h1>
 
-    <a href="{% url 'home'%}" class="btn btn-warning">Home</a>
+    <a href="{% url 'home'%}" class="btn btn-info">Home</a>
 
 </div>
